<resources>
    <string name="back_content_description">Back</string>
</resources>